scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 html {
   box-sizing: border-box;
   overflow-x: hidden;
-  scrollbar-gutter: stable;
 }
 
 *,
@@ -13,7 +12,7 @@ html {
 body {
   margin: 0;
   width: 100%;
-  overflow-x: hidden;
+  min-height: 100vh;
   font-family: "NTR", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
